# RVOS

./: .clang-format  .clang-tidy  .gitignore  .gitmessage  CMakeLists.txt  LICENSE  README.MD
cmake/Modules/: CodeCheck.cmake  CustomTarget.cmake  FindClangFormat.cmake  FindClangTidy.cmake  ToolsChainConf.cmake
docs/: Naming_conventions.md  TODO.MD
lib/ins/: CMakeLists.txt
lib/ins/inc/Core/: IBaseInstType.hh  InstFactory.hh  InstType.hh  InstTypeFactory.hh  Instruction.hh
lib/ins/inc/Gui/: InstCommST.hh  InstFormatUI.hh
lib/ins/inc/ISA/: Inst.hh  InstFormat.hh  Regs.hh  Regs.hpp
lib/ins/inc/Log/: Logger.hpp
lib/ins/inc/Parser/: parser.hh
lib/ins/inc/Util/: BiLookupTable.hpp  Bitops.hh  Regs.hh
lib/ins/src/Core/: IBaseInstType.cc  InstFactory.cc  InstType.cc  InstTypeFactory.cc  Instruction.cc
lib/ins/src/Gui/: InstCommST.cc  InstFormatUI.cc  InstStyle.css  Main.cc  MainWindow.cc  RISCVInstructionWindow.cc
lib/ins/src/ISA/: InstFormat.cc
lib/ins/tests/: INST.cc
lib/os/: CMakeLists.txt
lib/os/Startup/: _asm_start.ld  asm_start.S
lib/os/asm/: CMakeLists.txt  add.s  addi.s  and.s  main.c
lib/os/src/: kernel.cc  uart.cc
scripts/python/: mg_compile_cmd_flies.py
scripts/shell/: qemu_debug.sh
src/: CMakeLists.txt
src/ins/: CMakeLists.txt
src/ins/Startup/: rv64-virt.ld
src/ins/src/tests/test_gtkmm/: build.sh  instruction_viewer.css  test.cc  test_fields_hightlight.cc
src/os/: CMakeLists.txt
