add_executable(${PROJECT_NAME})

target_sources(${PROJECT_NAME} PRIVATE
    kernel.cc
)

target_link_options(${PROJECT_NAME} PRIVATE
    -Ttext=0x80000000
    -Wl,-Map=${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.map
)
SetupCodeChecks(${PROJECT_NAME})
RunInQEMU(${PROJECT_NAME})
GenerateASMFile(${PROJECT_NAME} "-DCS")
